tests/interpreter/valid/generate_embedding.mochi
let vec = generate embedding {
  text: "hi"
}
print(len(vec))
