tests/interpreter/errors/invalid_iterator.mochi
let x: any = 123
for i in x {
  print(i)
}
